// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`another session active 1`] = `
.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
}

.c10:hover,
.c10:focus {
  background: #B29DFF;
}

.c10:active {
  background: #C5B6FF;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c11:hover,
.c11:focus {
  background: rgba(255,255,255,0.13);
}

.c11:active {
  background: rgba(255,255,255,0.18);
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c9 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
}

.c8 {
  display: flex;
  flex-direction: column;
}

.c5 {
  display: flex;
  align-items: center;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
        style="flex-direction: column;"
      >
        <div
          class="c6"
          color="text.main"
        >
          Another Session Is Active
        </div>
      </div>
      <div
        class="c7 c8"
      >
        This desktop has an active session, connecting to it may close the other session. Do you wish to continue?
      </div>
      <div
        class="c9"
      >
        <button
          class="c10"
          kind="primary"
        >
          Abort
        </button>
        <button
          class="c11"
          kind="secondary"
        >
          Continue
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`connected settings false 1`] = `
.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.c9:hover,
.c9:focus {
  background: #B29DFF;
}

.c9:active {
  background: #C5B6FF;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000000;
  flex: 0 0 auto;
}

.c5 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
}

.c11 {
  box-sizing: border-box;
  color: rgba(255,255,255,0.36);
}

.c14 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.72);
}

.c14:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c14:not(:disabled):hover,
.c14:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c14:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c8 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding-right: 16px;
}

.c13 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  margin-right: 8px;
}

.c15 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
}

.c1 {
  display: flex;
  flex-direction: column;
}

.c3 {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c6 {
  display: flex;
}

.c7 {
  display: flex;
  align-items: center;
}

.c12 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c10 {
  color: #FFFFFF;
  min-height: 0;
  height: 24px;
  background-color: rgba(255,255,255,0.13);
}

.c10:hover,
.c10:focus {
  background-color: rgba(255,255,255,0.18);
}

<div>
  <div
    class="c0 c1"
  >
    <nav
      class="c2 c3"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c4"
        style="color: rgba(255, 255, 255, 0.72);"
      >
        user@host.com
      </div>
      <div
        class="c5 c6"
      >
        <div
          class="c0 c7"
        >
          <div
            class="c0 c6"
          >
            <span
              class="c8 icon icon-foldershared"
              style="color: rgba(255, 255, 255, 0.36);"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M3.75 4.5C3.35217 4.5 2.97064 4.65804 2.68934 4.93934C2.40804 5.22064 2.25 5.60217 2.25 6V18.75C2.25 19.1478 2.40804 19.5294 2.68934 19.8107C2.97065 20.092 3.35218 20.25 3.75 20.25H11.25C11.6642 20.25 12 19.9142 12 19.5C12 19.0858 11.6642 18.75 11.25 18.75H3.75L3.75 6L8.74969 6L11.3503 7.95C11.6099 8.1447 11.9258 8.25 12.2503 8.25H20.25V11.25C20.25 11.6642 20.5858 12 21 12C21.4142 12 21.75 11.6642 21.75 11.25V8.25C21.75 7.85218 21.592 7.47065 21.3107 7.18934C21.0294 6.90804 20.6478 6.75 20.25 6.75H12.2503L9.64969 4.8C9.39006 4.6053 9.07421 4.5 8.74969 4.5H3.75Z"
                />
                <path
                  clip-rule="evenodd"
                  d="M15 16.5C15 14.8431 16.3431 13.5 18 13.5C19.6569 13.5 21 14.8431 21 16.5C21 17.3283 20.6643 18.0783 20.1215 18.6212C20.8996 19.123 21.482 19.8946 21.7247 20.8072C21.8312 21.2075 21.593 21.6184 21.1927 21.7248C20.7924 21.8313 20.3816 21.5931 20.2751 21.1928C20.02 20.2334 19.1098 19.5 17.9999 19.5C16.8901 19.5 15.9799 20.2334 15.7247 21.1928C15.6183 21.5931 15.2075 21.8313 14.8072 21.7248C14.4069 21.6184 14.1687 21.2075 14.2751 20.8072C14.5179 19.8946 15.1003 19.123 15.8785 18.6211C15.3357 18.0782 15 17.3283 15 16.5ZM18 15C17.1716 15 16.5 15.6716 16.5 16.5C16.5 17.3284 17.1716 18 18 18C18.8284 18 19.5 17.3284 19.5 16.5C19.5 15.6716 18.8284 15 18 15Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="c0 c6"
          >
            <span
              class="c8 icon icon-clipboard"
              style="color: rgba(255, 255, 255, 0.36);"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M9 10.5C8.58579 10.5 8.25 10.8358 8.25 11.25C8.25 11.6642 8.58579 12 9 12H15C15.4142 12 15.75 11.6642 15.75 11.25C15.75 10.8358 15.4142 10.5 15 10.5H9Z"
                />
                <path
                  d="M9 13.5C8.58579 13.5 8.25 13.8358 8.25 14.25C8.25 14.6642 8.58579 15 9 15H15C15.4142 15 15.75 14.6642 15.75 14.25C15.75 13.8358 15.4142 13.5 15 13.5H9Z"
                />
                <path
                  clip-rule="evenodd"
                  d="M8.64589 3C8.70142 2.93792 8.75881 2.87723 8.81802 2.81802C9.66193 1.97411 10.8065 1.5 12 1.5C13.1935 1.5 14.3381 1.97411 15.182 2.81802C15.2412 2.87723 15.2986 2.93792 15.3541 3H18.75C19.1478 3 19.5294 3.15804 19.8107 3.43934C20.092 3.72065 20.25 4.10218 20.25 4.5V20.25C20.25 20.6478 20.092 21.0294 19.8107 21.3107C19.5294 21.592 19.1478 21.75 18.75 21.75H5.25C4.85218 21.75 4.47065 21.592 4.18934 21.3107C3.90804 21.0294 3.75 20.6478 3.75 20.25V4.5C3.75 4.10217 3.90804 3.72064 4.18934 3.43934C4.47064 3.15804 4.85217 3 5.25 3H8.64589ZM9.87868 3.87868C10.4413 3.31607 11.2044 3 12 3C12.7956 3 13.5587 3.31607 14.1213 3.87868C14.2202 3.97758 14.3115 4.08267 14.3948 4.19305C14.398 4.19746 14.4013 4.20184 14.4046 4.20617C14.7889 4.72126 15 5.34975 15 6H9C9 5.34975 9.21111 4.72126 9.59537 4.20617C9.5987 4.20183 9.60198 4.19746 9.60521 4.19305C9.6885 4.08268 9.77978 3.97758 9.87868 3.87868ZM7.75736 4.5H5.25L5.25 20.25H18.75L18.75 4.5H16.2426C16.4114 4.97731 16.5 5.48409 16.5 6V6.75C16.5 7.16421 16.1642 7.5 15.75 7.5H8.25C7.83579 7.5 7.5 7.16421 7.5 6.75V6C7.5 5.48409 7.58859 4.97731 7.75736 4.5Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <button
            class="c9 c10"
            kind="primary"
            title="Warnings"
          >
            <div
              class="c11 c12"
              color="rgba(255, 255, 255, 0.36)"
            >
              <span
                class="c13 icon icon-warning"
              >
                <svg
                  fill="currentColor"
                  height="20"
                  viewBox="0 0 24 24"
                  width="20"
                >
                  <path
                    d="M12 9C12.4142 9 12.75 9.33579 12.75 9.75V13.5C12.75 13.9142 12.4142 14.25 12 14.25C11.5858 14.25 11.25 13.9142 11.25 13.5V9.75C11.25 9.33579 11.5858 9 12 9Z"
                  />
                  <path
                    d="M12 17.8125C12.5178 17.8125 12.9375 17.3928 12.9375 16.875C12.9375 16.3572 12.5178 15.9375 12 15.9375C11.4822 15.9375 11.0625 16.3572 11.0625 16.875C11.0625 17.3928 11.4822 17.8125 12 17.8125Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M10.09 3.34287L1.88101 17.7086C1.04292 19.1753 2.10193 21.0001 3.79114 21.0001H20.2092C21.8984 21.0001 22.9574 19.1753 22.1193 17.7086L13.9103 3.34287C13.0657 1.86488 10.9346 1.86488 10.09 3.34287ZM3.18337 18.4528L11.3924 4.08708C11.6611 3.61681 12.3392 3.61681 12.6079 4.08708L20.8169 18.4528C21.0836 18.9195 20.7466 19.5001 20.2092 19.5001H3.79114C3.25367 19.5001 2.91671 18.9195 3.18337 18.4528Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
               
              0
            </div>
          </button>
        </div>
        <div
          class="c0 c7"
        >
          <button
            class="c14"
            color="text.slightlyMuted"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c15 icon icon-morehoriz"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M4.5 13.5C5.32843 13.5 6 12.8284 6 12C6 11.1716 5.32843 10.5 4.5 10.5C3.67157 10.5 3 11.1716 3 12C3 12.8284 3.67157 13.5 4.5 13.5Z"
                />
                <path
                  d="M12 13.5C12.8284 13.5 13.5 12.8284 13.5 12C13.5 11.1716 12.8284 10.5 12 10.5C11.1716 10.5 10.5 11.1716 10.5 12C10.5 12.8284 11.1716 13.5 12 13.5Z"
                />
                <path
                  d="M19.5 13.5C20.3284 13.5 21 12.8284 21 12C21 11.1716 20.3284 10.5 19.5 10.5C18.6716 10.5 18 11.1716 18 12C18 12.8284 18.6716 13.5 19.5 13.5Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </nav>
    <canvas
      style="display: flex; outline: none;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`connected settings true 1`] = `
.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.c9:hover,
.c9:focus {
  background: #B29DFF;
}

.c9:active {
  background: #C5B6FF;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000000;
  flex: 0 0 auto;
}

.c5 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
}

.c11 {
  box-sizing: border-box;
  color: rgba(255,255,255,0.36);
}

.c14 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.72);
}

.c14:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c14:not(:disabled):hover,
.c14:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c14:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c8 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding-right: 16px;
}

.c13 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  margin-right: 8px;
}

.c15 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
}

.c1 {
  display: flex;
  flex-direction: column;
}

.c3 {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c6 {
  display: flex;
}

.c7 {
  display: flex;
  align-items: center;
}

.c12 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c10 {
  color: #FFFFFF;
  min-height: 0;
  height: 24px;
  background-color: rgba(255,255,255,0.13);
}

.c10:hover,
.c10:focus {
  background-color: rgba(255,255,255,0.18);
}

<div>
  <div
    class="c0 c1"
  >
    <nav
      class="c2 c3"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c4"
        style="color: rgba(255, 255, 255, 0.72);"
      >
        user@host.com
      </div>
      <div
        class="c5 c6"
      >
        <div
          class="c0 c7"
        >
          <div
            class="c0 c6"
          >
            <span
              class="c8 icon icon-foldershared"
              style="color: rgb(255, 255, 255);"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M3.75 4.5C3.35217 4.5 2.97064 4.65804 2.68934 4.93934C2.40804 5.22064 2.25 5.60217 2.25 6V18.75C2.25 19.1478 2.40804 19.5294 2.68934 19.8107C2.97065 20.092 3.35218 20.25 3.75 20.25H11.25C11.6642 20.25 12 19.9142 12 19.5C12 19.0858 11.6642 18.75 11.25 18.75H3.75L3.75 6L8.74969 6L11.3503 7.95C11.6099 8.1447 11.9258 8.25 12.2503 8.25H20.25V11.25C20.25 11.6642 20.5858 12 21 12C21.4142 12 21.75 11.6642 21.75 11.25V8.25C21.75 7.85218 21.592 7.47065 21.3107 7.18934C21.0294 6.90804 20.6478 6.75 20.25 6.75H12.2503L9.64969 4.8C9.39006 4.6053 9.07421 4.5 8.74969 4.5H3.75Z"
                />
                <path
                  clip-rule="evenodd"
                  d="M15 16.5C15 14.8431 16.3431 13.5 18 13.5C19.6569 13.5 21 14.8431 21 16.5C21 17.3283 20.6643 18.0783 20.1215 18.6212C20.8996 19.123 21.482 19.8946 21.7247 20.8072C21.8312 21.2075 21.593 21.6184 21.1927 21.7248C20.7924 21.8313 20.3816 21.5931 20.2751 21.1928C20.02 20.2334 19.1098 19.5 17.9999 19.5C16.8901 19.5 15.9799 20.2334 15.7247 21.1928C15.6183 21.5931 15.2075 21.8313 14.8072 21.7248C14.4069 21.6184 14.1687 21.2075 14.2751 20.8072C14.5179 19.8946 15.1003 19.123 15.8785 18.6211C15.3357 18.0782 15 17.3283 15 16.5ZM18 15C17.1716 15 16.5 15.6716 16.5 16.5C16.5 17.3284 17.1716 18 18 18C18.8284 18 19.5 17.3284 19.5 16.5C19.5 15.6716 18.8284 15 18 15Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="c0 c6"
          >
            <span
              class="c8 icon icon-clipboard"
              style="color: rgb(255, 255, 255);"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M9 10.5C8.58579 10.5 8.25 10.8358 8.25 11.25C8.25 11.6642 8.58579 12 9 12H15C15.4142 12 15.75 11.6642 15.75 11.25C15.75 10.8358 15.4142 10.5 15 10.5H9Z"
                />
                <path
                  d="M9 13.5C8.58579 13.5 8.25 13.8358 8.25 14.25C8.25 14.6642 8.58579 15 9 15H15C15.4142 15 15.75 14.6642 15.75 14.25C15.75 13.8358 15.4142 13.5 15 13.5H9Z"
                />
                <path
                  clip-rule="evenodd"
                  d="M8.64589 3C8.70142 2.93792 8.75881 2.87723 8.81802 2.81802C9.66193 1.97411 10.8065 1.5 12 1.5C13.1935 1.5 14.3381 1.97411 15.182 2.81802C15.2412 2.87723 15.2986 2.93792 15.3541 3H18.75C19.1478 3 19.5294 3.15804 19.8107 3.43934C20.092 3.72065 20.25 4.10218 20.25 4.5V20.25C20.25 20.6478 20.092 21.0294 19.8107 21.3107C19.5294 21.592 19.1478 21.75 18.75 21.75H5.25C4.85218 21.75 4.47065 21.592 4.18934 21.3107C3.90804 21.0294 3.75 20.6478 3.75 20.25V4.5C3.75 4.10217 3.90804 3.72064 4.18934 3.43934C4.47064 3.15804 4.85217 3 5.25 3H8.64589ZM9.87868 3.87868C10.4413 3.31607 11.2044 3 12 3C12.7956 3 13.5587 3.31607 14.1213 3.87868C14.2202 3.97758 14.3115 4.08267 14.3948 4.19305C14.398 4.19746 14.4013 4.20184 14.4046 4.20617C14.7889 4.72126 15 5.34975 15 6H9C9 5.34975 9.21111 4.72126 9.59537 4.20617C9.5987 4.20183 9.60198 4.19746 9.60521 4.19305C9.6885 4.08268 9.77978 3.97758 9.87868 3.87868ZM7.75736 4.5H5.25L5.25 20.25H18.75L18.75 4.5H16.2426C16.4114 4.97731 16.5 5.48409 16.5 6V6.75C16.5 7.16421 16.1642 7.5 15.75 7.5H8.25C7.83579 7.5 7.5 7.16421 7.5 6.75V6C7.5 5.48409 7.58859 4.97731 7.75736 4.5Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <button
            class="c9 c10"
            kind="primary"
            title="Warnings"
          >
            <div
              class="c11 c12"
              color="rgba(255, 255, 255, 0.36)"
            >
              <span
                class="c13 icon icon-warning"
              >
                <svg
                  fill="currentColor"
                  height="20"
                  viewBox="0 0 24 24"
                  width="20"
                >
                  <path
                    d="M12 9C12.4142 9 12.75 9.33579 12.75 9.75V13.5C12.75 13.9142 12.4142 14.25 12 14.25C11.5858 14.25 11.25 13.9142 11.25 13.5V9.75C11.25 9.33579 11.5858 9 12 9Z"
                  />
                  <path
                    d="M12 17.8125C12.5178 17.8125 12.9375 17.3928 12.9375 16.875C12.9375 16.3572 12.5178 15.9375 12 15.9375C11.4822 15.9375 11.0625 16.3572 11.0625 16.875C11.0625 17.3928 11.4822 17.8125 12 17.8125Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M10.09 3.34287L1.88101 17.7086C1.04292 19.1753 2.10193 21.0001 3.79114 21.0001H20.2092C21.8984 21.0001 22.9574 19.1753 22.1193 17.7086L13.9103 3.34287C13.0657 1.86488 10.9346 1.86488 10.09 3.34287ZM3.18337 18.4528L11.3924 4.08708C11.6611 3.61681 12.3392 3.61681 12.6079 4.08708L20.8169 18.4528C21.0836 18.9195 20.7466 19.5001 20.2092 19.5001H3.79114C3.25367 19.5001 2.91671 18.9195 3.18337 18.4528Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
               
              0
            </div>
          </button>
        </div>
        <div
          class="c0 c7"
        >
          <button
            class="c14"
            color="text.slightlyMuted"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c15 icon icon-morehoriz"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M4.5 13.5C5.32843 13.5 6 12.8284 6 12C6 11.1716 5.32843 10.5 4.5 10.5C3.67157 10.5 3 11.1716 3 12C3 12.8284 3.67157 13.5 4.5 13.5Z"
                />
                <path
                  d="M12 13.5C12.8284 13.5 13.5 12.8284 13.5 12C13.5 11.1716 12.8284 10.5 12 10.5C11.1716 10.5 10.5 11.1716 10.5 12C10.5 12.8284 11.1716 13.5 12 13.5Z"
                />
                <path
                  d="M19.5 13.5C20.3284 13.5 21 12.8284 21 12C21 11.1716 20.3284 10.5 19.5 10.5C18.6716 10.5 18 11.1716 18 12C18 12.8284 18.6716 13.5 19.5 13.5Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </nav>
    <canvas
      style="display: flex; outline: none;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`connection error 1`] = `
.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 30%;
}

.c11:hover,
.c11:focus {
  background: rgba(255,255,255,0.13);
}

.c11:active {
  background: rgba(255,255,255,0.18);
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c9 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #039be5;
  color: #000000;
}

.c9 a {
  color: #FFFFFF;
}

.c10 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
}

.c8 {
  display: flex;
  flex-direction: column;
}

.c5 {
  display: flex;
  align-items: center;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
        style="flex-direction: column;"
      >
        <div
          class="c6"
          color="text.main"
        >
          Disconnected
        </div>
      </div>
      <div
        class="c7 c8"
      >
        <div
          class="c9"
          kind="info"
        >
          some tdp error
        </div>
        Refresh the page to reconnect.
      </div>
      <div
        class="c10"
      >
        <button
          class="c11"
          kind="secondary"
          width="30%"
        >
          Refresh
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`disconnected 1`] = `
.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.c9:hover,
.c9:focus {
  background: #B29DFF;
}

.c9:active {
  background: #C5B6FF;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000000;
  flex: 0 0 auto;
}

.c5 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
}

.c11 {
  box-sizing: border-box;
  color: rgba(255,255,255,0.36);
}

.c14 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.72);
}

.c14:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c14:not(:disabled):hover,
.c14:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c14:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c8 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding-right: 16px;
}

.c13 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  margin-right: 8px;
}

.c15 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
}

.c1 {
  display: flex;
  flex-direction: column;
}

.c3 {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c6 {
  display: flex;
}

.c7 {
  display: flex;
  align-items: center;
}

.c12 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c10 {
  color: #FFFFFF;
  min-height: 0;
  height: 24px;
  background-color: rgba(255,255,255,0.13);
}

.c10:hover,
.c10:focus {
  background-color: rgba(255,255,255,0.18);
}

<div>
  <div
    class="c0 c1"
  >
    <nav
      class="c2 c3"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c4"
        style="color: rgba(255, 255, 255, 0.72);"
      >
        user@host.com
      </div>
      <div
        class="c5 c6"
      >
        <div
          class="c0 c7"
        >
          <div
            class="c0 c6"
          >
            <span
              class="c8 icon icon-foldershared"
              style="color: rgba(255, 255, 255, 0.36);"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M3.75 4.5C3.35217 4.5 2.97064 4.65804 2.68934 4.93934C2.40804 5.22064 2.25 5.60217 2.25 6V18.75C2.25 19.1478 2.40804 19.5294 2.68934 19.8107C2.97065 20.092 3.35218 20.25 3.75 20.25H11.25C11.6642 20.25 12 19.9142 12 19.5C12 19.0858 11.6642 18.75 11.25 18.75H3.75L3.75 6L8.74969 6L11.3503 7.95C11.6099 8.1447 11.9258 8.25 12.2503 8.25H20.25V11.25C20.25 11.6642 20.5858 12 21 12C21.4142 12 21.75 11.6642 21.75 11.25V8.25C21.75 7.85218 21.592 7.47065 21.3107 7.18934C21.0294 6.90804 20.6478 6.75 20.25 6.75H12.2503L9.64969 4.8C9.39006 4.6053 9.07421 4.5 8.74969 4.5H3.75Z"
                />
                <path
                  clip-rule="evenodd"
                  d="M15 16.5C15 14.8431 16.3431 13.5 18 13.5C19.6569 13.5 21 14.8431 21 16.5C21 17.3283 20.6643 18.0783 20.1215 18.6212C20.8996 19.123 21.482 19.8946 21.7247 20.8072C21.8312 21.2075 21.593 21.6184 21.1927 21.7248C20.7924 21.8313 20.3816 21.5931 20.2751 21.1928C20.02 20.2334 19.1098 19.5 17.9999 19.5C16.8901 19.5 15.9799 20.2334 15.7247 21.1928C15.6183 21.5931 15.2075 21.8313 14.8072 21.7248C14.4069 21.6184 14.1687 21.2075 14.2751 20.8072C14.5179 19.8946 15.1003 19.123 15.8785 18.6211C15.3357 18.0782 15 17.3283 15 16.5ZM18 15C17.1716 15 16.5 15.6716 16.5 16.5C16.5 17.3284 17.1716 18 18 18C18.8284 18 19.5 17.3284 19.5 16.5C19.5 15.6716 18.8284 15 18 15Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="c0 c6"
          >
            <span
              class="c8 icon icon-clipboard"
              style="color: rgba(255, 255, 255, 0.36);"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M9 10.5C8.58579 10.5 8.25 10.8358 8.25 11.25C8.25 11.6642 8.58579 12 9 12H15C15.4142 12 15.75 11.6642 15.75 11.25C15.75 10.8358 15.4142 10.5 15 10.5H9Z"
                />
                <path
                  d="M9 13.5C8.58579 13.5 8.25 13.8358 8.25 14.25C8.25 14.6642 8.58579 15 9 15H15C15.4142 15 15.75 14.6642 15.75 14.25C15.75 13.8358 15.4142 13.5 15 13.5H9Z"
                />
                <path
                  clip-rule="evenodd"
                  d="M8.64589 3C8.70142 2.93792 8.75881 2.87723 8.81802 2.81802C9.66193 1.97411 10.8065 1.5 12 1.5C13.1935 1.5 14.3381 1.97411 15.182 2.81802C15.2412 2.87723 15.2986 2.93792 15.3541 3H18.75C19.1478 3 19.5294 3.15804 19.8107 3.43934C20.092 3.72065 20.25 4.10218 20.25 4.5V20.25C20.25 20.6478 20.092 21.0294 19.8107 21.3107C19.5294 21.592 19.1478 21.75 18.75 21.75H5.25C4.85218 21.75 4.47065 21.592 4.18934 21.3107C3.90804 21.0294 3.75 20.6478 3.75 20.25V4.5C3.75 4.10217 3.90804 3.72064 4.18934 3.43934C4.47064 3.15804 4.85217 3 5.25 3H8.64589ZM9.87868 3.87868C10.4413 3.31607 11.2044 3 12 3C12.7956 3 13.5587 3.31607 14.1213 3.87868C14.2202 3.97758 14.3115 4.08267 14.3948 4.19305C14.398 4.19746 14.4013 4.20184 14.4046 4.20617C14.7889 4.72126 15 5.34975 15 6H9C9 5.34975 9.21111 4.72126 9.59537 4.20617C9.5987 4.20183 9.60198 4.19746 9.60521 4.19305C9.6885 4.08268 9.77978 3.97758 9.87868 3.87868ZM7.75736 4.5H5.25L5.25 20.25H18.75L18.75 4.5H16.2426C16.4114 4.97731 16.5 5.48409 16.5 6V6.75C16.5 7.16421 16.1642 7.5 15.75 7.5H8.25C7.83579 7.5 7.5 7.16421 7.5 6.75V6C7.5 5.48409 7.58859 4.97731 7.75736 4.5Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <button
            class="c9 c10"
            kind="primary"
            title="Warnings"
          >
            <div
              class="c11 c12"
              color="rgba(255, 255, 255, 0.36)"
            >
              <span
                class="c13 icon icon-warning"
              >
                <svg
                  fill="currentColor"
                  height="20"
                  viewBox="0 0 24 24"
                  width="20"
                >
                  <path
                    d="M12 9C12.4142 9 12.75 9.33579 12.75 9.75V13.5C12.75 13.9142 12.4142 14.25 12 14.25C11.5858 14.25 11.25 13.9142 11.25 13.5V9.75C11.25 9.33579 11.5858 9 12 9Z"
                  />
                  <path
                    d="M12 17.8125C12.5178 17.8125 12.9375 17.3928 12.9375 16.875C12.9375 16.3572 12.5178 15.9375 12 15.9375C11.4822 15.9375 11.0625 16.3572 11.0625 16.875C11.0625 17.3928 11.4822 17.8125 12 17.8125Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M10.09 3.34287L1.88101 17.7086C1.04292 19.1753 2.10193 21.0001 3.79114 21.0001H20.2092C21.8984 21.0001 22.9574 19.1753 22.1193 17.7086L13.9103 3.34287C13.0657 1.86488 10.9346 1.86488 10.09 3.34287ZM3.18337 18.4528L11.3924 4.08708C11.6611 3.61681 12.3392 3.61681 12.6079 4.08708L20.8169 18.4528C21.0836 18.9195 20.7466 19.5001 20.2092 19.5001H3.79114C3.25367 19.5001 2.91671 18.9195 3.18337 18.4528Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
               
              0
            </div>
          </button>
        </div>
        <div
          class="c0 c7"
        >
          <button
            class="c14"
            color="text.slightlyMuted"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c15 icon icon-morehoriz"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M4.5 13.5C5.32843 13.5 6 12.8284 6 12C6 11.1716 5.32843 10.5 4.5 10.5C3.67157 10.5 3 11.1716 3 12C3 12.8284 3.67157 13.5 4.5 13.5Z"
                />
                <path
                  d="M12 13.5C12.8284 13.5 13.5 12.8284 13.5 12C13.5 11.1716 12.8284 10.5 12 10.5C11.1716 10.5 10.5 11.1716 10.5 12C10.5 12.8284 11.1716 13.5 12 13.5Z"
                />
                <path
                  d="M19.5 13.5C20.3284 13.5 21 12.8284 21 12C21 11.1716 20.3284 10.5 19.5 10.5C18.6716 10.5 18 11.1716 18 12C18 12.8284 18.6716 13.5 19.5 13.5Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </nav>
    <canvas
      style="display: none; outline: none;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`fetch error 1`] = `
.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 30%;
}

.c11:hover,
.c11:focus {
  background: rgba(255,255,255,0.13);
}

.c11:active {
  background: rgba(255,255,255,0.18);
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c9 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #039be5;
  color: #000000;
}

.c9 a {
  color: #FFFFFF;
}

.c10 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
}

.c8 {
  display: flex;
  flex-direction: column;
}

.c5 {
  display: flex;
  align-items: center;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
        style="flex-direction: column;"
      >
        <div
          class="c6"
          color="text.main"
        >
          Disconnected
        </div>
      </div>
      <div
        class="c7 c8"
      >
        <div
          class="c9"
          kind="info"
        >
          some fetch  error
        </div>
        Refresh the page to reconnect.
      </div>
      <div
        class="c10"
      >
        <button
          class="c11"
          kind="secondary"
          width="30%"
        >
          Refresh
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`fetch processing 1`] = `
.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.c9:hover,
.c9:focus {
  background: #B29DFF;
}

.c9:active {
  background: #C5B6FF;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000000;
  flex: 0 0 auto;
}

.c5 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
}

.c11 {
  box-sizing: border-box;
  color: rgba(255,255,255,0.36);
}

.c16 {
  box-sizing: border-box;
  margin: 72px;
  text-align: center;
}

.c14 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.72);
}

.c14:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c14:not(:disabled):hover,
.c14:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c14:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c8 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding-right: 16px;
}

.c13 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  margin-right: 8px;
}

.c15 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
}

.c1 {
  display: flex;
  flex-direction: column;
}

.c3 {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c6 {
  display: flex;
}

.c7 {
  display: flex;
  align-items: center;
}

.c12 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c10 {
  color: #FFFFFF;
  min-height: 0;
  height: 24px;
  background-color: rgba(255,255,255,0.13);
}

.c10:hover,
.c10:focus {
  background-color: rgba(255,255,255,0.18);
}

<div>
  <div
    class="c0 c1"
  >
    <nav
      class="c2 c3"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c4"
        style="color: rgba(255, 255, 255, 0.72);"
      >
        user@host.com
      </div>
      <div
        class="c5 c6"
      >
        <div
          class="c0 c7"
        >
          <div
            class="c0 c6"
          >
            <span
              class="c8 icon icon-foldershared"
              style="color: rgba(255, 255, 255, 0.36);"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M3.75 4.5C3.35217 4.5 2.97064 4.65804 2.68934 4.93934C2.40804 5.22064 2.25 5.60217 2.25 6V18.75C2.25 19.1478 2.40804 19.5294 2.68934 19.8107C2.97065 20.092 3.35218 20.25 3.75 20.25H11.25C11.6642 20.25 12 19.9142 12 19.5C12 19.0858 11.6642 18.75 11.25 18.75H3.75L3.75 6L8.74969 6L11.3503 7.95C11.6099 8.1447 11.9258 8.25 12.2503 8.25H20.25V11.25C20.25 11.6642 20.5858 12 21 12C21.4142 12 21.75 11.6642 21.75 11.25V8.25C21.75 7.85218 21.592 7.47065 21.3107 7.18934C21.0294 6.90804 20.6478 6.75 20.25 6.75H12.2503L9.64969 4.8C9.39006 4.6053 9.07421 4.5 8.74969 4.5H3.75Z"
                />
                <path
                  clip-rule="evenodd"
                  d="M15 16.5C15 14.8431 16.3431 13.5 18 13.5C19.6569 13.5 21 14.8431 21 16.5C21 17.3283 20.6643 18.0783 20.1215 18.6212C20.8996 19.123 21.482 19.8946 21.7247 20.8072C21.8312 21.2075 21.593 21.6184 21.1927 21.7248C20.7924 21.8313 20.3816 21.5931 20.2751 21.1928C20.02 20.2334 19.1098 19.5 17.9999 19.5C16.8901 19.5 15.9799 20.2334 15.7247 21.1928C15.6183 21.5931 15.2075 21.8313 14.8072 21.7248C14.4069 21.6184 14.1687 21.2075 14.2751 20.8072C14.5179 19.8946 15.1003 19.123 15.8785 18.6211C15.3357 18.0782 15 17.3283 15 16.5ZM18 15C17.1716 15 16.5 15.6716 16.5 16.5C16.5 17.3284 17.1716 18 18 18C18.8284 18 19.5 17.3284 19.5 16.5C19.5 15.6716 18.8284 15 18 15Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="c0 c6"
          >
            <span
              class="c8 icon icon-clipboard"
              style="color: rgba(255, 255, 255, 0.36);"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M9 10.5C8.58579 10.5 8.25 10.8358 8.25 11.25C8.25 11.6642 8.58579 12 9 12H15C15.4142 12 15.75 11.6642 15.75 11.25C15.75 10.8358 15.4142 10.5 15 10.5H9Z"
                />
                <path
                  d="M9 13.5C8.58579 13.5 8.25 13.8358 8.25 14.25C8.25 14.6642 8.58579 15 9 15H15C15.4142 15 15.75 14.6642 15.75 14.25C15.75 13.8358 15.4142 13.5 15 13.5H9Z"
                />
                <path
                  clip-rule="evenodd"
                  d="M8.64589 3C8.70142 2.93792 8.75881 2.87723 8.81802 2.81802C9.66193 1.97411 10.8065 1.5 12 1.5C13.1935 1.5 14.3381 1.97411 15.182 2.81802C15.2412 2.87723 15.2986 2.93792 15.3541 3H18.75C19.1478 3 19.5294 3.15804 19.8107 3.43934C20.092 3.72065 20.25 4.10218 20.25 4.5V20.25C20.25 20.6478 20.092 21.0294 19.8107 21.3107C19.5294 21.592 19.1478 21.75 18.75 21.75H5.25C4.85218 21.75 4.47065 21.592 4.18934 21.3107C3.90804 21.0294 3.75 20.6478 3.75 20.25V4.5C3.75 4.10217 3.90804 3.72064 4.18934 3.43934C4.47064 3.15804 4.85217 3 5.25 3H8.64589ZM9.87868 3.87868C10.4413 3.31607 11.2044 3 12 3C12.7956 3 13.5587 3.31607 14.1213 3.87868C14.2202 3.97758 14.3115 4.08267 14.3948 4.19305C14.398 4.19746 14.4013 4.20184 14.4046 4.20617C14.7889 4.72126 15 5.34975 15 6H9C9 5.34975 9.21111 4.72126 9.59537 4.20617C9.5987 4.20183 9.60198 4.19746 9.60521 4.19305C9.6885 4.08268 9.77978 3.97758 9.87868 3.87868ZM7.75736 4.5H5.25L5.25 20.25H18.75L18.75 4.5H16.2426C16.4114 4.97731 16.5 5.48409 16.5 6V6.75C16.5 7.16421 16.1642 7.5 15.75 7.5H8.25C7.83579 7.5 7.5 7.16421 7.5 6.75V6C7.5 5.48409 7.58859 4.97731 7.75736 4.5Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <button
            class="c9 c10"
            kind="primary"
            title="Warnings"
          >
            <div
              class="c11 c12"
              color="rgba(255, 255, 255, 0.36)"
            >
              <span
                class="c13 icon icon-warning"
              >
                <svg
                  fill="currentColor"
                  height="20"
                  viewBox="0 0 24 24"
                  width="20"
                >
                  <path
                    d="M12 9C12.4142 9 12.75 9.33579 12.75 9.75V13.5C12.75 13.9142 12.4142 14.25 12 14.25C11.5858 14.25 11.25 13.9142 11.25 13.5V9.75C11.25 9.33579 11.5858 9 12 9Z"
                  />
                  <path
                    d="M12 17.8125C12.5178 17.8125 12.9375 17.3928 12.9375 16.875C12.9375 16.3572 12.5178 15.9375 12 15.9375C11.4822 15.9375 11.0625 16.3572 11.0625 16.875C11.0625 17.3928 11.4822 17.8125 12 17.8125Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M10.09 3.34287L1.88101 17.7086C1.04292 19.1753 2.10193 21.0001 3.79114 21.0001H20.2092C21.8984 21.0001 22.9574 19.1753 22.1193 17.7086L13.9103 3.34287C13.0657 1.86488 10.9346 1.86488 10.09 3.34287ZM3.18337 18.4528L11.3924 4.08708C11.6611 3.61681 12.3392 3.61681 12.6079 4.08708L20.8169 18.4528C21.0836 18.9195 20.7466 19.5001 20.2092 19.5001H3.79114C3.25367 19.5001 2.91671 18.9195 3.18337 18.4528Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
               
              0
            </div>
          </button>
        </div>
        <div
          class="c0 c7"
        >
          <button
            class="c14"
            color="text.slightlyMuted"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c15 icon icon-morehoriz"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M4.5 13.5C5.32843 13.5 6 12.8284 6 12C6 11.1716 5.32843 10.5 4.5 10.5C3.67157 10.5 3 11.1716 3 12C3 12.8284 3.67157 13.5 4.5 13.5Z"
                />
                <path
                  d="M12 13.5C12.8284 13.5 13.5 12.8284 13.5 12C13.5 11.1716 12.8284 10.5 12 10.5C11.1716 10.5 10.5 11.1716 10.5 12C10.5 12.8284 11.1716 13.5 12 13.5Z"
                />
                <path
                  d="M19.5 13.5C20.3284 13.5 21 12.8284 21 12C21 11.1716 20.3284 10.5 19.5 10.5C18.6716 10.5 18 11.1716 18 12C18 12.8284 18.6716 13.5 19.5 13.5Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </nav>
    <div
      class="c16"
    />
    <canvas
      style="display: none; outline: none;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`processing 1`] = `
.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.c9:hover,
.c9:focus {
  background: #B29DFF;
}

.c9:active {
  background: #C5B6FF;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000000;
  flex: 0 0 auto;
}

.c5 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
}

.c11 {
  box-sizing: border-box;
  color: rgba(255,255,255,0.36);
}

.c16 {
  box-sizing: border-box;
  margin: 72px;
  text-align: center;
}

.c14 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.72);
}

.c14:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c14:not(:disabled):hover,
.c14:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c14:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c8 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding-right: 16px;
}

.c13 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  margin-right: 8px;
}

.c15 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
}

.c1 {
  display: flex;
  flex-direction: column;
}

.c3 {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c6 {
  display: flex;
}

.c7 {
  display: flex;
  align-items: center;
}

.c12 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c10 {
  color: #FFFFFF;
  min-height: 0;
  height: 24px;
  background-color: rgba(255,255,255,0.13);
}

.c10:hover,
.c10:focus {
  background-color: rgba(255,255,255,0.18);
}

<div>
  <div
    class="c0 c1"
  >
    <nav
      class="c2 c3"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c4"
        style="color: rgba(255, 255, 255, 0.72);"
      >
        user@host.com
      </div>
      <div
        class="c5 c6"
      >
        <div
          class="c0 c7"
        >
          <div
            class="c0 c6"
          >
            <span
              class="c8 icon icon-foldershared"
              style="color: rgba(255, 255, 255, 0.36);"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M3.75 4.5C3.35217 4.5 2.97064 4.65804 2.68934 4.93934C2.40804 5.22064 2.25 5.60217 2.25 6V18.75C2.25 19.1478 2.40804 19.5294 2.68934 19.8107C2.97065 20.092 3.35218 20.25 3.75 20.25H11.25C11.6642 20.25 12 19.9142 12 19.5C12 19.0858 11.6642 18.75 11.25 18.75H3.75L3.75 6L8.74969 6L11.3503 7.95C11.6099 8.1447 11.9258 8.25 12.2503 8.25H20.25V11.25C20.25 11.6642 20.5858 12 21 12C21.4142 12 21.75 11.6642 21.75 11.25V8.25C21.75 7.85218 21.592 7.47065 21.3107 7.18934C21.0294 6.90804 20.6478 6.75 20.25 6.75H12.2503L9.64969 4.8C9.39006 4.6053 9.07421 4.5 8.74969 4.5H3.75Z"
                />
                <path
                  clip-rule="evenodd"
                  d="M15 16.5C15 14.8431 16.3431 13.5 18 13.5C19.6569 13.5 21 14.8431 21 16.5C21 17.3283 20.6643 18.0783 20.1215 18.6212C20.8996 19.123 21.482 19.8946 21.7247 20.8072C21.8312 21.2075 21.593 21.6184 21.1927 21.7248C20.7924 21.8313 20.3816 21.5931 20.2751 21.1928C20.02 20.2334 19.1098 19.5 17.9999 19.5C16.8901 19.5 15.9799 20.2334 15.7247 21.1928C15.6183 21.5931 15.2075 21.8313 14.8072 21.7248C14.4069 21.6184 14.1687 21.2075 14.2751 20.8072C14.5179 19.8946 15.1003 19.123 15.8785 18.6211C15.3357 18.0782 15 17.3283 15 16.5ZM18 15C17.1716 15 16.5 15.6716 16.5 16.5C16.5 17.3284 17.1716 18 18 18C18.8284 18 19.5 17.3284 19.5 16.5C19.5 15.6716 18.8284 15 18 15Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="c0 c6"
          >
            <span
              class="c8 icon icon-clipboard"
              style="color: rgba(255, 255, 255, 0.36);"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M9 10.5C8.58579 10.5 8.25 10.8358 8.25 11.25C8.25 11.6642 8.58579 12 9 12H15C15.4142 12 15.75 11.6642 15.75 11.25C15.75 10.8358 15.4142 10.5 15 10.5H9Z"
                />
                <path
                  d="M9 13.5C8.58579 13.5 8.25 13.8358 8.25 14.25C8.25 14.6642 8.58579 15 9 15H15C15.4142 15 15.75 14.6642 15.75 14.25C15.75 13.8358 15.4142 13.5 15 13.5H9Z"
                />
                <path
                  clip-rule="evenodd"
                  d="M8.64589 3C8.70142 2.93792 8.75881 2.87723 8.81802 2.81802C9.66193 1.97411 10.8065 1.5 12 1.5C13.1935 1.5 14.3381 1.97411 15.182 2.81802C15.2412 2.87723 15.2986 2.93792 15.3541 3H18.75C19.1478 3 19.5294 3.15804 19.8107 3.43934C20.092 3.72065 20.25 4.10218 20.25 4.5V20.25C20.25 20.6478 20.092 21.0294 19.8107 21.3107C19.5294 21.592 19.1478 21.75 18.75 21.75H5.25C4.85218 21.75 4.47065 21.592 4.18934 21.3107C3.90804 21.0294 3.75 20.6478 3.75 20.25V4.5C3.75 4.10217 3.90804 3.72064 4.18934 3.43934C4.47064 3.15804 4.85217 3 5.25 3H8.64589ZM9.87868 3.87868C10.4413 3.31607 11.2044 3 12 3C12.7956 3 13.5587 3.31607 14.1213 3.87868C14.2202 3.97758 14.3115 4.08267 14.3948 4.19305C14.398 4.19746 14.4013 4.20184 14.4046 4.20617C14.7889 4.72126 15 5.34975 15 6H9C9 5.34975 9.21111 4.72126 9.59537 4.20617C9.5987 4.20183 9.60198 4.19746 9.60521 4.19305C9.6885 4.08268 9.77978 3.97758 9.87868 3.87868ZM7.75736 4.5H5.25L5.25 20.25H18.75L18.75 4.5H16.2426C16.4114 4.97731 16.5 5.48409 16.5 6V6.75C16.5 7.16421 16.1642 7.5 15.75 7.5H8.25C7.83579 7.5 7.5 7.16421 7.5 6.75V6C7.5 5.48409 7.58859 4.97731 7.75736 4.5Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <button
            class="c9 c10"
            kind="primary"
            title="Warnings"
          >
            <div
              class="c11 c12"
              color="rgba(255, 255, 255, 0.36)"
            >
              <span
                class="c13 icon icon-warning"
              >
                <svg
                  fill="currentColor"
                  height="20"
                  viewBox="0 0 24 24"
                  width="20"
                >
                  <path
                    d="M12 9C12.4142 9 12.75 9.33579 12.75 9.75V13.5C12.75 13.9142 12.4142 14.25 12 14.25C11.5858 14.25 11.25 13.9142 11.25 13.5V9.75C11.25 9.33579 11.5858 9 12 9Z"
                  />
                  <path
                    d="M12 17.8125C12.5178 17.8125 12.9375 17.3928 12.9375 16.875C12.9375 16.3572 12.5178 15.9375 12 15.9375C11.4822 15.9375 11.0625 16.3572 11.0625 16.875C11.0625 17.3928 11.4822 17.8125 12 17.8125Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M10.09 3.34287L1.88101 17.7086C1.04292 19.1753 2.10193 21.0001 3.79114 21.0001H20.2092C21.8984 21.0001 22.9574 19.1753 22.1193 17.7086L13.9103 3.34287C13.0657 1.86488 10.9346 1.86488 10.09 3.34287ZM3.18337 18.4528L11.3924 4.08708C11.6611 3.61681 12.3392 3.61681 12.6079 4.08708L20.8169 18.4528C21.0836 18.9195 20.7466 19.5001 20.2092 19.5001H3.79114C3.25367 19.5001 2.91671 18.9195 3.18337 18.4528Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
               
              0
            </div>
          </button>
        </div>
        <div
          class="c0 c7"
        >
          <button
            class="c14"
            color="text.slightlyMuted"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c15 icon icon-morehoriz"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M4.5 13.5C5.32843 13.5 6 12.8284 6 12C6 11.1716 5.32843 10.5 4.5 10.5C3.67157 10.5 3 11.1716 3 12C3 12.8284 3.67157 13.5 4.5 13.5Z"
                />
                <path
                  d="M12 13.5C12.8284 13.5 13.5 12.8284 13.5 12C13.5 11.1716 12.8284 10.5 12 10.5C11.1716 10.5 10.5 11.1716 10.5 12C10.5 12.8284 11.1716 13.5 12 13.5Z"
                />
                <path
                  d="M19.5 13.5C20.3284 13.5 21 12.8284 21 12C21 11.1716 20.3284 10.5 19.5 10.5C18.6716 10.5 18 11.1716 18 12C18 12.8284 18.6716 13.5 19.5 13.5Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </nav>
    <div
      class="c16"
    />
    <canvas
      style="display: none; outline: none;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`tdp processing 1`] = `
.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.c9:hover,
.c9:focus {
  background: #B29DFF;
}

.c9:active {
  background: #C5B6FF;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  height: 40px;
  background-color: #000000;
  flex: 0 0 auto;
}

.c5 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
}

.c11 {
  box-sizing: border-box;
  color: rgba(255,255,255,0.36);
}

.c16 {
  box-sizing: border-box;
  margin: 72px;
  text-align: center;
}

.c14 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 12px;
  height: 24px;
  width: 24px;
  margin-left: 24px;
  color: rgba(255,255,255,0.72);
}

.c14:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c14:not(:disabled):hover,
.c14:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c14:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c8 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding-right: 16px;
}

.c13 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  margin-right: 8px;
}

.c15 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  padding-left: 16px;
  padding-right: 16px;
}

.c1 {
  display: flex;
  flex-direction: column;
}

.c3 {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.c6 {
  display: flex;
}

.c7 {
  display: flex;
  align-items: center;
}

.c12 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c10 {
  color: #FFFFFF;
  min-height: 0;
  height: 24px;
  background-color: rgba(255,255,255,0.13);
}

.c10:hover,
.c10:focus {
  background-color: rgba(255,255,255,0.18);
}

<div>
  <div
    class="c0 c1"
  >
    <nav
      class="c2 c3"
      height="40px"
      style="justify-content: space-between;"
    >
      <div
        class="c4"
        style="color: rgba(255, 255, 255, 0.72);"
      >
        user@host.com
      </div>
      <div
        class="c5 c6"
      >
        <div
          class="c0 c7"
        >
          <div
            class="c0 c6"
          >
            <span
              class="c8 icon icon-foldershared"
              style="color: rgba(255, 255, 255, 0.36);"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M3.75 4.5C3.35217 4.5 2.97064 4.65804 2.68934 4.93934C2.40804 5.22064 2.25 5.60217 2.25 6V18.75C2.25 19.1478 2.40804 19.5294 2.68934 19.8107C2.97065 20.092 3.35218 20.25 3.75 20.25H11.25C11.6642 20.25 12 19.9142 12 19.5C12 19.0858 11.6642 18.75 11.25 18.75H3.75L3.75 6L8.74969 6L11.3503 7.95C11.6099 8.1447 11.9258 8.25 12.2503 8.25H20.25V11.25C20.25 11.6642 20.5858 12 21 12C21.4142 12 21.75 11.6642 21.75 11.25V8.25C21.75 7.85218 21.592 7.47065 21.3107 7.18934C21.0294 6.90804 20.6478 6.75 20.25 6.75H12.2503L9.64969 4.8C9.39006 4.6053 9.07421 4.5 8.74969 4.5H3.75Z"
                />
                <path
                  clip-rule="evenodd"
                  d="M15 16.5C15 14.8431 16.3431 13.5 18 13.5C19.6569 13.5 21 14.8431 21 16.5C21 17.3283 20.6643 18.0783 20.1215 18.6212C20.8996 19.123 21.482 19.8946 21.7247 20.8072C21.8312 21.2075 21.593 21.6184 21.1927 21.7248C20.7924 21.8313 20.3816 21.5931 20.2751 21.1928C20.02 20.2334 19.1098 19.5 17.9999 19.5C16.8901 19.5 15.9799 20.2334 15.7247 21.1928C15.6183 21.5931 15.2075 21.8313 14.8072 21.7248C14.4069 21.6184 14.1687 21.2075 14.2751 20.8072C14.5179 19.8946 15.1003 19.123 15.8785 18.6211C15.3357 18.0782 15 17.3283 15 16.5ZM18 15C17.1716 15 16.5 15.6716 16.5 16.5C16.5 17.3284 17.1716 18 18 18C18.8284 18 19.5 17.3284 19.5 16.5C19.5 15.6716 18.8284 15 18 15Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="c0 c6"
          >
            <span
              class="c8 icon icon-clipboard"
              style="color: rgba(255, 255, 255, 0.36);"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M9 10.5C8.58579 10.5 8.25 10.8358 8.25 11.25C8.25 11.6642 8.58579 12 9 12H15C15.4142 12 15.75 11.6642 15.75 11.25C15.75 10.8358 15.4142 10.5 15 10.5H9Z"
                />
                <path
                  d="M9 13.5C8.58579 13.5 8.25 13.8358 8.25 14.25C8.25 14.6642 8.58579 15 9 15H15C15.4142 15 15.75 14.6642 15.75 14.25C15.75 13.8358 15.4142 13.5 15 13.5H9Z"
                />
                <path
                  clip-rule="evenodd"
                  d="M8.64589 3C8.70142 2.93792 8.75881 2.87723 8.81802 2.81802C9.66193 1.97411 10.8065 1.5 12 1.5C13.1935 1.5 14.3381 1.97411 15.182 2.81802C15.2412 2.87723 15.2986 2.93792 15.3541 3H18.75C19.1478 3 19.5294 3.15804 19.8107 3.43934C20.092 3.72065 20.25 4.10218 20.25 4.5V20.25C20.25 20.6478 20.092 21.0294 19.8107 21.3107C19.5294 21.592 19.1478 21.75 18.75 21.75H5.25C4.85218 21.75 4.47065 21.592 4.18934 21.3107C3.90804 21.0294 3.75 20.6478 3.75 20.25V4.5C3.75 4.10217 3.90804 3.72064 4.18934 3.43934C4.47064 3.15804 4.85217 3 5.25 3H8.64589ZM9.87868 3.87868C10.4413 3.31607 11.2044 3 12 3C12.7956 3 13.5587 3.31607 14.1213 3.87868C14.2202 3.97758 14.3115 4.08267 14.3948 4.19305C14.398 4.19746 14.4013 4.20184 14.4046 4.20617C14.7889 4.72126 15 5.34975 15 6H9C9 5.34975 9.21111 4.72126 9.59537 4.20617C9.5987 4.20183 9.60198 4.19746 9.60521 4.19305C9.6885 4.08268 9.77978 3.97758 9.87868 3.87868ZM7.75736 4.5H5.25L5.25 20.25H18.75L18.75 4.5H16.2426C16.4114 4.97731 16.5 5.48409 16.5 6V6.75C16.5 7.16421 16.1642 7.5 15.75 7.5H8.25C7.83579 7.5 7.5 7.16421 7.5 6.75V6C7.5 5.48409 7.58859 4.97731 7.75736 4.5Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <button
            class="c9 c10"
            kind="primary"
            title="Warnings"
          >
            <div
              class="c11 c12"
              color="rgba(255, 255, 255, 0.36)"
            >
              <span
                class="c13 icon icon-warning"
              >
                <svg
                  fill="currentColor"
                  height="20"
                  viewBox="0 0 24 24"
                  width="20"
                >
                  <path
                    d="M12 9C12.4142 9 12.75 9.33579 12.75 9.75V13.5C12.75 13.9142 12.4142 14.25 12 14.25C11.5858 14.25 11.25 13.9142 11.25 13.5V9.75C11.25 9.33579 11.5858 9 12 9Z"
                  />
                  <path
                    d="M12 17.8125C12.5178 17.8125 12.9375 17.3928 12.9375 16.875C12.9375 16.3572 12.5178 15.9375 12 15.9375C11.4822 15.9375 11.0625 16.3572 11.0625 16.875C11.0625 17.3928 11.4822 17.8125 12 17.8125Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M10.09 3.34287L1.88101 17.7086C1.04292 19.1753 2.10193 21.0001 3.79114 21.0001H20.2092C21.8984 21.0001 22.9574 19.1753 22.1193 17.7086L13.9103 3.34287C13.0657 1.86488 10.9346 1.86488 10.09 3.34287ZM3.18337 18.4528L11.3924 4.08708C11.6611 3.61681 12.3392 3.61681 12.6079 4.08708L20.8169 18.4528C21.0836 18.9195 20.7466 19.5001 20.2092 19.5001H3.79114C3.25367 19.5001 2.91671 18.9195 3.18337 18.4528Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
               
              0
            </div>
          </button>
        </div>
        <div
          class="c0 c7"
        >
          <button
            class="c14"
            color="text.slightlyMuted"
            data-testid="button"
            style="font-size: 20px;"
          >
            <span
              class="c15 icon icon-morehoriz"
            >
              <svg
                fill="currentColor"
                height="20"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M4.5 13.5C5.32843 13.5 6 12.8284 6 12C6 11.1716 5.32843 10.5 4.5 10.5C3.67157 10.5 3 11.1716 3 12C3 12.8284 3.67157 13.5 4.5 13.5Z"
                />
                <path
                  d="M12 13.5C12.8284 13.5 13.5 12.8284 13.5 12C13.5 11.1716 12.8284 10.5 12 10.5C11.1716 10.5 10.5 11.1716 10.5 12C10.5 12.8284 11.1716 13.5 12 13.5Z"
                />
                <path
                  d="M19.5 13.5C20.3284 13.5 21 12.8284 21 12C21 11.1716 20.3284 10.5 19.5 10.5C18.6716 10.5 18 11.1716 18 12C18 12.8284 18.6716 13.5 19.5 13.5Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </nav>
    <div
      class="c16"
    />
    <canvas
      style="display: none; outline: none;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`unintended disconnect 1`] = `
.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 30%;
}

.c11:hover,
.c11:focus {
  background: rgba(255,255,255,0.13);
}

.c11:active {
  background: rgba(255,255,255,0.18);
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c9 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #039be5;
  color: #000000;
}

.c9 a {
  color: #FFFFFF;
}

.c10 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 32px;
  flex: 1;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
}

.c8 {
  display: flex;
  flex-direction: column;
}

.c5 {
  display: flex;
  align-items: center;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 484px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
        style="flex-direction: column;"
      >
        <div
          class="c6"
          color="text.main"
        >
          Disconnected
        </div>
      </div>
      <div
        class="c7 c8"
      >
        <div
          class="c9"
          kind="info"
        >
          websocket disconnected for an unknown reason
        </div>
        Refresh the page to reconnect.
      </div>
      <div
        class="c10"
      >
        <button
          class="c11"
          kind="secondary"
          width="30%"
        >
          Refresh
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`webauthn prompt 1`] = `
.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-right: 16px;
  width: 130px;
}

.c11:hover,
.c11:focus {
  background: #B29DFF;
}

.c11:active {
  background: #C5B6FF;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c12:hover,
.c12:focus {
  background: rgba(255,255,255,0.13);
}

.c12:active {
  background: rgba(255,255,255,0.18);
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 40px;
  flex: 1;
}

.c10 {
  box-sizing: border-box;
  text-align: center;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  text-transform: uppercase;
  margin: 0px;
  color: #FFFFFF;
  text-align: center;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  text-align: center;
}

.c8 {
  display: flex;
  flex-direction: column;
}

.c5 {
  display: flex;
  align-items: center;
}

.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0,0,0,0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  width: 400px;
}

<div
  class="c0"
  data-testid="Modal"
>
  <div
    aria-hidden="true"
    class="c1"
    data-testid="backdrop"
  />
  <div
    class="c2"
  >
    <div
      class="c3"
      data-testid="dialogbox"
    >
      <div
        class="c4 c5"
        style="flex-direction: column;"
      >
        <div
          class="c6"
          color="text.main"
        >
          Multi-factor authentication
        </div>
      </div>
      <div
        class="c7 c8"
      >
        <div
          class="c9"
        >
          Re-enter your multi-factor authentication in the browser to continue.
        </div>
      </div>
      <div
        class="c10"
      >
        <button
          class="c11"
          kind="primary"
          width="130px"
        >
          OK
        </button>
        <button
          class="c12"
          kind="secondary"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;
